/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)

===============================================================================

2007-02-21  Gilles Dumortier <dgil at ieee.org>
	* Live View : Decision Information (SF bug 1625267)

2007-02-20  Gilles Dumortier <dgil at ieee.org>
	* Start implement Live View : Decision Information (SF bug 1625267)
	* Matrix View : display a mark for traded quotes (SF bug 1660985)
	* Term period and Risk level per line : properties of the portfolio
	* View Stops : do not display portfolio information for a quote not in
	  the portfolio !
	* View Stops : be able to add a quote not in the matrix
	* Barchart plugin : a request per letter - otherwise, some symbols are
	  missing (like CSCO)
	* Check software release for upgrading (SF bug 1647466)
	* Euronext plugin : URL to import historical data was changed
	* Euronext plugin : URL to get IdInstrument was changed
	* Move symbols lists to specific /symbols folder (on going work to have
	  symbols lists storage per market)
	* Euronext plugin : update the URL to download symbols lists
	  Also, modify internal code of the plugin to be more dynamic in front
          of the format for the returned data

2007-02-18  Gilles Dumortier <dgil at ieee.org>
	* New tarball
	* Quotes selection : sort by name (SF bug 1562293)
	* Portfolios selection : sort by name (SF bug 1562293)
	* Operation Edit: sort operation type + better display
	* Operation View: filter by year not displayed (SF bug 1626233)
	* Portfolio : edit the default VAT (SF bug 1474568)

2007-02-17  Gilles Dumortier <dgil at ieee.org>
	* Empty id/passwd : do not try to log to service
	* Switch to Notebook Experimental Feature (SF bug 1651970)
	* r571(-x): Change Portfolio : don't stay on last view (SF bug 1657836)
	* r560(-x): Change language : update twice (SF bug 1653525)
	* Operation View: Order by date and not by day (SF bug 1611501)